# evisor

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: aarch64-elf-gcc.cmake  cross-toolchain-clang-aarch64.cmake  cross-toolchain-gcc-aarch64.cmake
config/raspi4/: config.txt
demos/: evisor_qemu_nuttx_demo.mov
examples/linux/: README.md
examples/nuttx/: README.md  qemu_rom.c
examples/serial/: CMakeLists.txt  README.md  qemu_rom.c
examples/serial/src/: boot.S  linker.ld  main.c  pl011_uart.c  pl011_uart.h  sysregs.h
examples/test_app/: CMakeLists.txt  README.md
examples/test_app/src/: boot.S  linker.ld
src/arch/: common_asm_macro.h  kernel.h  ld_symbols.h  mmu_config.h  sched.h
src/arch/arm64/: arm_generic_timer.cc  arm_generic_timer.h  barriers.h  boot.S  boot_el2.cc  boot_el2.h  cpu_regs.cc  cpu_regs.h  cpu_regs_def.h  mmu.cc  mmu.h
src/arch/arm64/boot/qemu/cortex-a72/: linker.ld
src/arch/arm64/boot/raspberry-pi4/: linker.ld
src/arch/arm64/irq/: cpu_irq.cc  cpu_irq.h  gic.cc  gic.h  gic_v2.cc  gic_v2.h  trap.cc  trap.h  vector_table.S  vectors.S  vectors_common.S  vectors_local_def.h
src/arch/arm64/kernel/: sched_vcpu_switch.S
src/arch/arm64/scripts/qemu/: linker.ld
src/arch/arm64/scripts/qemu/cortex-a72/: linker.ld
src/arch/arm64/scripts/rpi4/: linker.ld
src/arch/arm64/scripts/rpi5/: linker.ld
src/common/: assert.h  cctype.h  cstdio.h  cstring.h  list.cc  list.h  logger.h  macro.h  queue.cc  queue.h
src/common/abi/cpp/: dummy.cc
src/common/cctype/: isdigit.cc  isdigit.h
src/common/cstdio/: dummy.cc  printf.cc  printf.h  putc.cc  putc.h  puts.cc  puts.h
src/common/cstring/: memcpy.cc  memcpy.h  memset.cc  memset.h  memzero.cc  memzero.h  strlen.cc  strlen.h  strncmp.cc  strncmp.h
src/common/functional/: dummy.cc
src/drivers/: common.cc  common.h
src/drivers/clkrst/: clkrst.h  clkrst_bcm2711.cc  clkrst_bcm2711.h
src/drivers/gpio/: gpio.h  gpio_bcm2711.cc  gpio_bcm2711.h
src/drivers/mailbox/: mailbox.h  mailbox_bcm2711.cc  mailbox_bcm2711.h
src/drivers/mmc/: mmc.cc  mmc.h  mmc_card.cc  mmc_clock.cc  mmc_internal.h  mmc_irq.cc
src/drivers/uart/: pl011_uart.cc  pl011_uart.h
src/drivers/virtio/: virtio-blk.cc  virtio-blk.h
src/fs/: loader.cc  loader.h
src/fs/fat/: fat32.cc  fat32.h
src/kernel/: kernel_main.cc
src/kernel/sched/: sched.h  sched_core.cc  sched_create_task.cc  sched_task_console.cc  sched_task_context.cc  sched_virq.cc
src/kernel/task/: task.h  task_config.h
src/kernel/vm/: vm.cc  vm.h
src/mm/: kmm_trap.cc  kmm_trap.h  mm_local.h  new.cc  new.h  pgtable.h  pgtable_stage1.cc  pgtable_stage1.h  pgtable_stage2.cc  pgtable_stage2.h
src/mm/heap/: kmm_malloc.cc  kmm_malloc.h  kmm_zalloc.cc  kmm_zalloc.h
src/mm/uncached/: kmm_uncached_malloc.cc  kmm_uncached_malloc.h  kmm_uncached_zalloc.cc  kmm_uncached_zalloc.h
src/mm/user_heap/: umm_malloc.cc  umm_malloc.h  umm_zalloc.cc  umm_zalloc.h
